2006-08-21 intermediate
	- made package indepentend of src
	  added BASE/AliHLTStdIncludes.h which should take the job of
	  including std headers
	- removed eff C++ warnings in BASE
	- TPCref library off by default
	- added doc pictures to distribution
	- TPCLib version interface no 2
	- started to sort header includes in TPCLib
	
2006-08-17 Jochen's TPCLib source code from Jan 2006 (not a joke) merged
	- bugfix in AliHLTTPCConfMapper (caused low tracking efficiency)
	- Online Display development
	- Note: the AliHLTTPCDisplay Interface has been changed -> AliHLTGUI
	  has to be re-linked
	- no changes in BASE

2005-09-07 Files imported from src comp and kalman into new TPCLib
	a short history of files ...
	AliHLTTPCBenchmark.cxx	                         AliL3Benchmark.cxx,v 1.10 2005/06/14 10:55:21 cvetan Exp 
	AliHLTTPCBenchmark.h			         AliL3Benchmark.h,v 1.6 2004/06/26 11:39:40 loizides 
	AliHLTTPCClusterFinder.cxx		         original AliL3ClustFinderNew.cxx
	AliHLTTPCClusterFinder.h                         original AliL3ClustFinderNew.h	                                         
	AliHLTTPCClustFinderNew.cxx			 AliL3ClustFinderNew.cxx,v 1.29 2005/06/14 10:55:21 cvetan Exp 	
	AliHLTTPCClustFinderNew.h                        AliL3ClustFinderNew.h,v 1.13 2004/06/18 10:55:26 loizides Exp 		
	AliHLTTPCConfMapFit.cxx		                 AliL3ConfMapFit.cxx,v 1.14 2005/06/14 10:55:21 cvetan Exp	
	AliHLTTPCConfMapFit.h	                         AliL3ConfMapFit.h,v 1.5 2004/07/05 09:03:11 loizides Exp 	   
	AliHLTTPCConfMapper.cxx		                 AliL3ConfMapper.cxx,v 1.26 2005/06/14 10:55:21 cvetan Exp $	
	AliHLTTPCConfMapper.h                            AliL3ConfMapper.h,v 1.11 2004/07/05 09:03:11 loizides Exp $		  
	AliHLTTPCConfMapPoint.cxx		         AliL3ConfMapPoint.cxx,v 1.10 2005/06/23 17:46:55 hristov Exp $	
	AliHLTTPCConfMapPoint.h		                 AliL3ConfMapPoint.h,v 1.8 2005/06/23 17:46:55 hristov Exp $   	