@@ -22,7 +22,7 @@ $(DICTCPP:.cxx=.h): $(DICTCPP)
 	if test $@ ; then : ; else rm -f $< ; $(MAKE) $(MAKEFLAGS) $< ; fi 
 
 $(DICTCPP): $(DICTHEADERS:%=$(srcdir)/%) $(DICTDEF)
-	if [ -x $(ROOTCINT) ]; then $(ROOTCINT) -f $@ -c $(AM_CPPFLAGS) $(DEFS) $^ ; fi
+	if [ -x $(ROOTCINT) ]; then $(ROOTCINT) -f $@ -c $(CPPFLAGS) $(AM_CPPFLAGS) $(DEFS) $^ ; fi
 $(DICTDEF): Makefile.am
 	@echo '//automatically generated ROOT DICT definition' > $@
 	@echo '//!!! DO NOT EDIT THIS FILE !!!' >> $@
